# orca_ros

./: CMakeLists.txt  README.md  package.xml
config/: simple_lwr_model.rviz
docs/: Doxyfile_RTD.in  Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/examples/: traxxs.rst
examples/: gazebo_node.cc  min_jerk_traj.cc  minimal_client.cc  minimal_controller.cc  minimal_controller_gazebo.cc  rviz_task_controller.cc
include/orca_ros/: messages.h  orca_ros.h  services.h
include/orca_ros/common/: RosCartesianAccelerationPID.h  RosCartesianAccelerationPIDProxy.h  RosCartesianServoController.h  RosPIDController.h  RosPIDControllerProxy.h  RosTaskBase.h  RosTaskBaseProxy.h  RosWrapperBase.h
include/orca_ros/constraint/: RosEqualityConstraint.h  RosGenericConstraint.h  RosGenericConstraintProxy.h  RosJointLimitConstraint.h  RosJointLimitConstraintProxy.h  RosJointTorqueLimitConstraint.h
include/orca_ros/gazebo/: RosGazeboModel.h
include/orca_ros/optim/: RosController.h  RosControllerProxy.h
include/orca_ros/robot/: RosRobotDynTree.h  RosRobotDynTreeProxy.h  RosRobotModel.h  RosRobotModelProxy.h
include/orca_ros/task/: RosCartesianTask.h  RosCartesianTaskProxy.h  RosGenericTask.h  RosGenericTaskProxy.h
include/orca_ros/utils/: MsgUtils.h
launch/: lwr_rviz_demo.launch  min_jerk_traj.launch  orca_ros_demo.launch  orca_ros_rviz_demo.launch
msg/: CartesianTaskState.msg  JointTorqueCommand.msg  RobotState.msg
src/: orca_controller.cc
src/common/: RosCartesianAccelerationPID.cc  RosCartesianAccelerationPIDProxy.cc  RosPIDController.cc  RosPIDControllerProxy.cc  RosTaskBase.cc  RosTaskBaseProxy.cc  RosWrapperBase.cc
src/constraint/: RosGenericConstraint.cc  RosGenericConstraintProxy.cc  RosJointLimitConstraint.cc  RosJointLimitConstraintProxy.cc
src/gazebo/: RosGazeboModel.cc
src/optim/: RosController.cc  RosControllerProxy.cc
src/robot/: RosRobotDynTree.cc  RosRobotDynTreeProxy.cc  RosRobotModel.cc  RosRobotModelProxy.cc
src/task/: RosCartesianTask.cc  RosCartesianTaskProxy.cc  RosGenericTask.cc  RosGenericTaskProxy.cc
srv/: AddConstraint.srv  AddTask.srv  GetDesired.srv  GetEnum.srv  GetMatrix.srv  GetSize.srv  SetDesired.srv  SetDouble.srv  SetEnum.srv  SetInt.srv  SetMatrix.srv  SetSize.srv  UpdateController.srv
