<?xml version="1.0"?>
<package format="2">
  <name>orca_ros</name>
  <version>1.0.0</version>
  <description>The orca_ros package</description>

  <maintainer email="info@fuzzylogicrobotics.com">Fuzzy Logic Robotics</maintainer>
  <author email="info@fuzzylogicrobotics.com">Antoine Hoarau</author>
  <author email="info@fuzzylogicrobotics.com">Ryan Lober</author>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>orca</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
</package>
